--- a/index.html
+++ b/index.html
@@ -2,20 +2,24 @@
 <html lang="ar" dir="rtl">
 <head>
     <meta charset="UTF-8">
-    <title>Arabic Word Cloud Generator</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>سحابة الكلمات العربية</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="container">
+        <h1>سحابة الكلمات العربية</h1>
+        <p>أدخل النص العربي أدناه لإنشاء سحابة كلمات:</p>
+        <textarea id="textInput" placeholder="أدخل النص العربي هنا..."></textarea>
+        <button onclick="generateWordCloud()">إنشاء سحابة الكلمات</button>
+        <div id="wordCloud">
+            <canvas id="cloudCanvas"></canvas>
+        </div>
+    </div>
 
-    <h1>توليد سحابة كلمات باللغة العربية</h1>
-
-    <textarea id="text-input" placeholder="أدخل النص هنا..."></textarea>
-    <button onclick="generateWordCloud()">توليد السحابة</button>
-
-    <div id="wordcloud-container"></div>
-
-    <script src="https://cdn.jsdelivr.net/npm/wordcloud2.js"></script>
+    <!-- Libraries -->
+    <script src="https://cdn.jsdelivr.net/npm/arabic-reshaper@2.1.3/dist/index.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/wordcloud@1.2.2/src/wordcloud2.js"></script>
     <script src="script.js"></script>
-
 </body>
 </html>
